plugins {
    id 'java'
}

repositories {
    mavenCentral()
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(16)
    }
}

compileJava {
    options.encoding = 'UTF-8'
    sourceCompatibility = '16'
    targetCompatibility = '16'
}

dependencies {
    implementation project(':core')
    annotationProcessor project(':compiler')
    annotationProcessor project(':core')
    testImplementation 'org.junit.jupiter:junit-jupiter:5.7.1'
    testImplementation 'org.mockito:mockito-core:3.9.0' //  for mocking resourcebundle
}

test {
    useJUnitPlatform()
    testLogging {
        events 'failed'
    }
}
